added configuration strategy and extracting repositories strategy